--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 jstor_metadata
 result_files
 volume_files
-*_post_process.xml
-*_proper.xml
-example_filled.xml
-example_text.xml
+*.xml
+!example.xml
+!marcxml_empty.xml
 *.csv
 *.json
 !present_records.json
