--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,12 @@ jstor_add_links
 multiple_crawl
 proper_files
 result_files
-result_files_processed
 volume_files
 final_files
 article_links
 review_links
+different_files
+final_additional_information
 *.xml
 !example.xml
 !marcxml_empty.xml
